--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -7,6 +7,10 @@ on:
   pull_request:
     branches:
       - main
+env:
+    REGISTRY: ghcr.io
+    IMAGE_NAME: ${{ github.repository }}
+    GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
 
 jobs:
 # Application build job
@@ -52,6 +56,7 @@ jobs:
   docker:
     needs: build
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
         # Supported architectures
