--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -83,7 +83,7 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CI_TOKEN }}
 
       - name: Build and push
         id: docker_build
