--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id "net.researchgate.release" version "3.1.0"
 }
 
 group = 'uk.co.foulkes'
@@ -31,4 +32,16 @@ test {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+release  {
+    failOnCommitNeeded = true
+    failOnPublishNeeded = true
+    failOnSnapshotDependencies = false
+    failOnUnversionedFiles = true
+    failOnTagExists = true
+    tagTemplate = 'v$version'
+    preTagCommitMessage = 'Release version $version'
+    preTagCommitMessage = 'Release version $version'
+    preTagCommitMessage = 'Release version $version'}
 }
