--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -3,23 +3,25 @@ name: Build & Test Java App
 on:
   push:
     branches:
-      - '*'
+      - main
   pull_request:
     branches:
-      - main
+      - '*'
+
 env:
-    REGISTRY: ghcr.io
-    IMAGE_NAME: ${{ github.repository }}
-    GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
+  GITHUB_TOKEN: ${{ secrets.CI_TOKEN }}
 
 jobs:
-# Application build job
   build:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Set up JDK 23
         uses: actions/setup-java@v4
@@ -37,8 +39,8 @@ jobs:
             ./gradlew release -Prelease.useAutomaticVersion=true
             VERSION=$(./gradlew -q printReleaseVersion)
           else
-            ./gradlew nextVersion -Dincrementer=patch
-            VERSION=$(./gradlew -q printNextVersion)
+            ./gradlew release -Prelease.useAutomaticVersion=true -Prelease.incrementer=patch
+            VERSION=$(./gradlew -q printReleaseVersion)
           fi
           echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
         env:
@@ -67,7 +69,6 @@ jobs:
           name: build-directory
           path: build/libs/
 
-# Container build job
   docker:
     needs: build
     runs-on: ubuntu-latest
@@ -75,7 +76,7 @@ jobs:
     strategy:
       matrix:
         # Supported architectures
-        platforms: [ linux/arm64, linux/amd64, linux/arm64 ]
+        platforms: [linux/arm64, linux/amd64, linux/arm64]
 
     steps:
       - name: Checkout code
