--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,13 @@ tasks.named('test') {
     useJUnitPlatform()
 }
 
+task printVersion {
+    doLast {
+        println "${project.version}"
+    }
+}
+
+
 release {
     failOnCommitNeeded = true
     failOnPublishNeeded = true
