--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.4'
     id 'io.spring.dependency-management' version '1.1.7'
+    id "net.researchgate.release" version "3.1.0"
 }
 
 group = 'uk.co.foulkes'
@@ -9,7 +10,7 @@ version = '0.0.1-SNAPSHOT'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(24)
+        languageVersion = JavaLanguageVersion.of(23)
     }
 }
 
@@ -31,4 +32,32 @@ test {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+task printVersion {
+    doLast {
+        println "${project.version}"
+    }
+}
+
+
+release {
+    failOnCommitNeeded = true
+    failOnPublishNeeded = true
+    failOnSnapshotDependencies = false
+    failOnUnversionedFiles = true
+    //failOnTagExists = true
+    tagTemplate = 'v$version'
+    versionPropertyFile = 'gradle.properties'
+    snapshotSuffix = '-SNAPSHOT'
+    preTagCommitMessage = 'Release version $version'
+    preTagCommitMessage = 'Release version $version'
+    preTagCommitMessage = 'Release version $version'
+
+    git {
+        pushToRemote.set('origin')
+        pushToBranchPrefix.set('')
+        commitVersionFileOnly.set(false)
+        signTag.set(false)
+    }
 }
