--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -36,6 +36,8 @@ jobs:
       - name: Determine release version
         id: determine_release_version
         run: |
+          ls -la
+          git status
           if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
             ./gradlew release -Prelease.useAutomaticVersion=true
             VERSION=$(./gradlew -q printVersion)
@@ -101,7 +103,7 @@ jobs:
 
       - name: Build and push
         id: docker_build
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v6
         with:
           context: .
           platforms: ${{ matrix.platforms }}
