--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -30,11 +30,14 @@ jobs:
           java-version: '23'
           distribution: 'temurin'
 
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Determine release version
         id: determine_release_version
         run: |
-          ls -la
-          git status
+          git add gradlew
+          git commit -m "Chmod gradlew"
           if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
             ./gradlew release -Prelease.useAutomaticVersion=true
             VERSION=$(./gradlew -q printVersion)
