--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -36,7 +36,8 @@ jobs:
 
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin https://x-access-token:${{ secrets.CI_TOKEN }}@github.com/${{ github.repository }}.git
+          git remote remove origin || true
+          git remote set-url origin git@github.com:${{ github.repository }}.git
           if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
             ./gradlew release -Prelease.useAutomaticVersion=true
             VERSION=$(./gradlew -q printVersion)
