--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -34,6 +34,7 @@ jobs:
         id: determine_release_version
         run: |
           echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+          mkdir ~/.ssh
           chmod 600 ~/.ssh/id_ed25519
           ssh-keyscan github.com >> ~/.ssh/known_hosts
           git config user.name "github-actions[bot]"
