--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -15,7 +15,6 @@ env:
 
 jobs:
   build:
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: ubuntu-latest
 
     steps:
@@ -29,32 +28,6 @@ jobs:
         with:
           java-version: '23'
           distribution: 'temurin'
-
-      - name: Determine release version
-        id: determine_release_version
-        run: |
-          mkdir ~/.ssh
-          echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
-          chmod 600 ~/.ssh/id_ed25519
-          ssh-keyscan github.com >> ~/.ssh/known_hosts
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git remote set-url origin git@github.com:${{ github.repository }}.git
-          if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
-            ./gradlew release -Prelease.useAutomaticVersion=true
-            VERSION=$(./gradlew -q printVersion)
-          fi
-          echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        shell: bash
-
-      - name: Upload Problems Report
-        if: always() # Ensure it runs even if the build fails
-        uses: actions/upload-artifact@v4
-        with:
-          name: problems-report
-          path: build/reports/problems/problems-report.html
 
       - name: Build with Gradle
         run: ./gradlew build
@@ -78,7 +51,43 @@ jobs:
           name: build-directory
           path: build/libs/
 
+  release:
+      if: "!contains(github.event.head_commit.message, '[skip ci]')"
+      needs: build
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+          with:
+            fetch-depth: 0
+
+        - name: Create Release Version
+          id: determine_release_version
+          run: |
+            mkdir ~/.ssh
+            echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/id_ed25519
+            chmod 600 ~/.ssh/id_ed25519
+            ssh-keyscan github.com >> ~/.ssh/known_hosts
+            git config user.name "github-actions[bot]"
+            git config user.email "github-actions[bot]@users.noreply.github.com"
+            git remote set-url origin git@github.com:${{ github.repository }}.git
+            if [[ "${GITHUB_REF}" == "refs/heads/main" ]]; then
+              ./gradlew release -Prelease.useAutomaticVersion=true
+              VERSION=$(./gradlew -q printVersion)
+            fi
+            echo "RELEASE_VERSION=$VERSION" >> $GITHUB_ENV
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          shell: bash
+
+        - name: Upload Problems Report
+          if: always() # Ensure it runs even if the build fails
+          uses: actions/upload-artifact@v4
+          with:
+            name: problems-report
+            path: build/reports/problems/problems-report.html
   docker:
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     needs: build
     runs-on: ubuntu-latest
 
