Fix - include changes to build pipleine to cover how the bootJar phase works.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,11 @@ task printVersion {
     }
 }
 
+bootJar {
+    archiveBaseName.set('CriticalIssueRestService')
+    archiveVersion.set('')
+    archiveClassifier.set('')
+}
 
 release {
     failOnCommitNeeded = true
