--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -45,11 +45,11 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew bootJar # Ensure bootJar is used
 
-      - name: Archive build directory
+      - name: Archive Boot JAR
         uses: actions/upload-artifact@v4
         with:
-          name: build-directory
-          path: build/libs/
+          name: boot-jar
+          path: build/libs/CriticalIssueRestService.jar
 
   release:
       if: "!contains(github.event.head_commit.message, '[skip ci]')"
@@ -60,6 +60,12 @@ jobs:
           uses: actions/checkout@v4
           with:
             fetch-depth: 0
+
+        - name: Set up JDK 23
+          uses: actions/setup-java@v4
+          with:
+               java-version: '23'
+               distribution: 'temurin'
 
         - name: Create Release Version
           id: determine_release_version
@@ -88,7 +94,7 @@ jobs:
             path: build/reports/problems/problems-report.html
   docker:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
-    needs: build
+    needs: release
     runs-on: ubuntu-latest
 
     strategy:
@@ -100,11 +106,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Download build directory
+      - name: Download Boot JAR
         uses: actions/download-artifact@v4
         with:
-          name: build-directory
-          path: build/libs/
+            name: boot-jar
+            path: build/libs/
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
