#3 Create a helm chart

--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -100,7 +100,7 @@ jobs:
     strategy:
       matrix:
         # Supported architectures
-        platforms: [linux/arm64, linux/amd64, linux/arm64]
+        platforms: [linux/arm64, linux/amd64, linux/arm/v7, linux/386]
 
     steps:
       - name: Checkout code
