--- a/helm/alert-manager/values.yaml
+++ b/helm/alert-manager/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: ghcr.io/dfoulkes/alertmanager-custom-api-manager
+  repository: ghcr.io/dfoulkes/alertmanager-custom-api-manager/critical-issue-rest-service
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
