--- a/helm/alert-manager/values.yaml
+++ b/helm/alert-manager/values.yaml
@@ -79,10 +79,16 @@ livenessProbe:
   httpGet:
     path: /
     port: http
+  initialDelaySeconds: 30
+  periodSeconds: 10
+  timeoutSeconds: 5
 readinessProbe:
   httpGet:
     path: /actuator/health
     port: 8080
+  initialDelaySeconds: 30
+  periodSeconds: 10
+  timeoutSeconds: 5
 
 autoscaling:
   enabled: false
