--- a/helm/alert-manager/values.yaml
+++ b/helm/alert-manager/values.yaml
@@ -77,7 +77,7 @@ resources: {}
 
 livenessProbe:
   httpGet:
-    path: /
+    path: /actuator/health
     port: http
   initialDelaySeconds: 30
   periodSeconds: 10
