--- a/helm/alert-manager/values.yaml
+++ b/helm/alert-manager/values.yaml
@@ -78,7 +78,7 @@ resources: {}
 livenessProbe:
   httpGet:
     path: /actuator/health
-    port: http
+    port: 8080
   initialDelaySeconds: 30
   periodSeconds: 10
   timeoutSeconds: 5
