alertmanager-custom-api-manager-3 (#5)
* feat - adding helm chart, still needs to be configured though.

* feat - fixing pipeline again, missing x64

* #3 Create a helm chart

* fix - include arm8 and amd64

* fix - include arm8 and amd64

* feat - fixing pipeline again, missing x64

* fix - include arm8 and amd64

* fix - include arm8 and amd64

* fix - include arm8 and amd64

* feat - corrected the values fo the helm service.

* feat - helm chart complete.

--- a/.github/workflows/build-app.yaml
+++ b/.github/workflows/build-app.yaml
@@ -100,7 +100,7 @@ jobs:
     strategy:
       matrix:
         # Supported architectures
-        platforms: [linux/arm64, linux/amd64, linux/arm64]
+        platforms: [linux/arm64, linux/amd64]
 
     steps:
       - name: Checkout code
@@ -130,7 +130,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: ${{ matrix.platforms }}
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ghcr.io/${{ github.repository }}/critical-issue-rest-service:latest
