--- a/helm/alert-manager/values.yaml
+++ b/helm/alert-manager/values.yaml
@@ -40,12 +40,14 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
-  port: 8771
+
+  type: LoadBalancer
+  port: 80
   targetPort: 8080
-  # annotations:
-  #  metallb.universe.tf/loadBalancerIPs: 192.168.55.15
-    # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
+  protocol: TCP
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 192.168.55.15
+  # service.beta.kubernetes.io/aws-load-balancer-internal: "true"
 
 ingress:
   enabled: false
@@ -79,9 +81,7 @@ livenessProbe:
   httpGet:
     path: /actuator/health
     port: 8080
-  initialDelaySeconds: 30
-  periodSeconds: 10
-  timeoutSeconds: 5
+
 readinessProbe:
   httpGet:
     path: /actuator/health
